# WePOINTS

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pylint.yml
scripts/: pretrain_filtering_with_ppl.py
server/: README.md  demo_client.py  ray_server.py
serving/server/: ray_server.py
wepoints/models/: __init__.py
wepoints/models/vision/: __init__.py  qwen2_5_vl_navit.py  qwen2_vl_navit.py  qwen3_vl_navit.py
wepoints/utils/: __init__.py
wepoints/utils/images/: __init__.py  catty.py  dynamic_high_resolution.py  qwen2vl_image_processor.py
wepoints/utils/models/: __init__.py  model_soup.py
